Fix layout issue

--- a/src/components/ContentSection.css
+++ b/src/components/ContentSection.css
@@ -6,7 +6,7 @@
     color: var(--text-color);
 }
 
-.container {
+.content-section .container {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -15,19 +15,19 @@
 }
 
 @media (min-width: 768px) {
-    .container {
+    .content-section .container {
         max-width: 768px;
     }
 }
 
 @media (min-width: 1024px) {
-    .container {
+    .content-section .container {
         max-width: 1024px;
     }
 }
 
 @media (min-width: 1280px) {
-    .container {
+    .content-section .container {
         max-width: 1280px;
     }
 }
