--- a/src/components/VehicleGrid.css
+++ b/src/components/VehicleGrid.css
@@ -5,7 +5,7 @@
     color: var(--text-color);
 }
 
-.container {
+.vehicle-grid-section .container {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -14,19 +14,19 @@
 }
 
 @media (min-width: 768px) {
-    .container {
+    .vehicle-grid-section .container {
         max-width: 768px;
     }
 }
 
 @media (min-width: 1024px) {
-    .container {
+    .vehicle-grid-section .container {
         max-width: 1024px;
     }
 }
 
 @media (min-width: 1280px) {
-    .container {
+    .vehicle-grid-section .container {
         max-width: 1280px;
     }
 }
